Endgame: Singularity Changelog

v0.24 (released 2006.06.??):

USER-VISIBLE CHANGES:
- The Page Up, Page Down, Home, and End keys work in all listboxes. (emh)
- Modified money displays to keep them from overflowing. (Phil)

v0.23a (released 2006.03.08):

USER-VISIBLE CHANGES:
* Save/load works on Windows again. (emh, rspoerri for bug report)
- Updated option help (emh)

v0.23 (released 2006.03.06):

USER-VISIBLE CHANGES:
- Fixed bug that allowed access to uncompleted bases. (emh, Borg[MDQ] for
  report)
* Added ability to destroy bases. (emh, multiple people for suggestion)
* Reduced (real-world) processor usage. (emh, anonymous for suggestion)
- Moved savefile location to ~/.endgame/saves (emh, Nescius for patch)
* Added finance screen. (emh, many for suggestion)
- Construction time bonus actually works now. (emh)
- More numbers use commas now. (emh)
- Increased cost of clusters. (emh)
- Adjusted button positions for greater usability. (Phil)
- Minor typo fixes and tightened grammar. (Phil)
* Further massive reduction in processor usage using new Clock class. (Phil,
  Adam Bark for original patch)
- Can destroy bases under construction. (emh, Tim Freeman for suggestion)
- Bases under construction are no longer protected indefinitely from being
  discovered. (emh, Tim Freeman for noting problem)
- Automatically bump machines working jobs to new job levels when they are
  researched. (emh, Phil for suggestion :)
- Tweak Suspicion and Detection displays for readability. (Phil)
- Move around the various displays on the base screen for parity with the map
  screen. (Phil)
- Display the name of the base at the top of the base screen. (Phil,
  Ticho for suggestion)
- Reduce discovery chance to 0% after the game is won. (Phil, Szabó Roland for
  suggestion)
- Properly localize win screen. (Phil)
* Right-click will exit from all menus. (emh, mandos for suggestion)
- Warn players when research selected on the Research screen will not use all