@@ -5,6 +5,8 @@ v0.24 (released 2006.06.??):
 USER-VISIBLE CHANGES:
 - The Page Up, Page Down, Home, and End keys work in all listboxes. (emh)
 - Modified money displays to keep them from overflowing. (Phil)
+* Suspicion loss is now quadratic; different groups "forget" quicker.
+  (Phil, Ticho for the suggestion)
 
 v0.23a (released 2006.03.08):
 
